# GeorgiaTech-Logo-Projection

./: CMakeLists.txt  README.md  final.avi  initial.avi
data/: video_pts.csv
eigen-eigen-323c052e1731/cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Eigen3Targets.cmake  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/Eigen/: Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/bench/spbench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/blas/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/blas/testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/demos/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/demos/mandelbrot/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mandelbrot.moc_parameters
eigen-eigen-323c052e1731/cmake/demos/opengl/: CTestTestfile.cmake  Makefile  cmake_install.cmake  quaternion_demo.moc_parameters
eigen-eigen-323c052e1731/cmake/doc/: Doxyfile  Doxyfile-unsupported  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/lapack/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/scripts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen-eigen-323c052e1731/cmake/unsupported/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: logo_project.cpp
(+27 files in other folders)
